# Tonearm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  compose.yml  dev.Dockerfile  hatch_build.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  release.yml
src/tonearm/: __init__.py  app.py
src/tonearm/api/cobalt/: __init__.py  client.py  exceptions.py
src/tonearm/bot/: __init__.py  exceptions.py  module.py  tonearm.py  translator.py
src/tonearm/bot/audiosource/: __init__.py  controllable.py  seekable.py
src/tonearm/bot/checks/: __init__.py  base.py  can_use_dj_command.py  has_dj_role.py  has_guild_permissions.py  is_anarchy.py
src/tonearm/bot/cogs/: __init__.py  base.py
src/tonearm/bot/cogs/checks/: __init__.py  any_of.py  can_use_dj_command.py  exceptions.py  has_dj_role.py  has_guild_permissions.py  internal.py  is_anarchy.py  is_correct_channel.py  is_dj_member.py  is_guild_administrator.py  is_guild_owner.py  is_not_anarchy.py  is_owner.py
src/tonearm/bot/cogs/commands/: __init__.py  back.py  base.py  clean.py  clear.py  debug.py  dj.py  forward.py  history.py  join.py  jump.py  leave.py  loop.py  move.py  next.py  now.py  pause.py  play.py  previous.py  queue.py  remove.py  resume.py  rewind.py  seek.py  setting.py  shuffle.py  shutdown.py  stop.py  version.py  volume.py  votenext.py  voteskip.py
src/tonearm/bot/cogs/converters/: __init__.py  boolean.py  duration.py  exceptions.py  locale.py  loop_mode.py  machine_index.py  zero_index.py
src/tonearm/bot/cogs/converters/boolean/: __init__.py  converter.py  exceptions.py
src/tonearm/bot/cogs/converters/locale/: __init__.py  (+2 more)
src/tonearm/bot/cogs/listeners/: __init__.py  app_command_error.py  application_command_error.py  error.py  ready.py  voice_state_change.py
src/tonearm/bot/cogs/transformers/: __init__.py  boolean.py  duration.py  exceptions.py  locale.py  loop_mode.py  zero_index.py
src/tonearm/bot/data/: __init__.py  metadata.py
src/tonearm/bot/managers/: __init__.py  base.py  bot.py  chat.py  dj.py  embed.py  embed_builder.py  player.py  queue.py  service.py  settings.py  storage.py
src/tonearm/bot/managers/i18n/: __init__.py  manager.py
src/tonearm/bot/managers/translations/: __init__.py  manager.py
src/tonearm/bot/services/: __init__.py  bot.py  chat.py  dj.py  embed.py  embed_builder.py  player.py  queue.py  storage.py
src/tonearm/bot/services/bot/: __init__.py  service.py  version.py
src/tonearm/bot/services/dj/: __init__.py  exceptions.py  service.py
src/tonearm/bot/services/embed/: __init__.py  exceptions.py  service.py
src/tonearm/bot/services/media/: __init__.py  base.py  cobalt.py  direct_url.py  exceptions.py  service.py  youtube.py
src/tonearm/bot/services/metadata/: __init__.py  base.py  direct_url.py  exceptions.py  metadata.py  service.py  youtube_search.py  youtube_url.py
src/tonearm/bot/services/player/: __init__.py  audiosource.py  buffer.py  exceptions.py  loop.py  player.py  queue.py  service.py  status.py  track.py  voice_client.py  vote.py
src/tonearm/bot/services/settings/: __init__.py  exceptions.py  service.py
src/tonearm/bot/services/source/: __init__.py  base.py  direct_url.py  exceptions.py  service.py  youtube.py
src/tonearm/bot/services/storage/: __init__.py  base.py  service.py
src/tonearm/cli/: __init__.py  action.py  parser.py
src/tonearm/cobalt/: __init__.py  error.py
src/tonearm/configuration/: __init__.py  configuration.py  converters.py  module.py
src/tonearm/exceptions/: __init__.py
src/tonearm/modules/: __init__.py  configuration.py
src/tonearm/utils/: __init__.py  markdown.py  singleton.py  static_singleton.py  strings.py  translatable.py
(+11 files in other folders)
