[build-system]
requires = ["hatchling >= 1.27", "hatch-vcs >= 0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.metadata.hooks.vcs.urls]
homepage = "https://github.com/Renaud11232/Tonearm"
source = "https://github.com/Renaud11232/Tonearm.git"
download = "https://github.com/Renaud11232/Tonearm/archive/{commit_hash}.zip"
issues = "https://github.com/Renaud11232/Tonearm/issues"

[project]
dynamic = [
    "version",
    "urls"
]
name = "Tonearm"
dependencies = [
    "nextcord[voice] >= 3.1.0, < 4",
    "google-api-python-client >= 2.170.0, < 3",
    "requests >= 2.32.3"
]
requires-python = ">= 3.13"
authors = [
    {name = "Renaud Gaspard", email = "gaspardrenaud@hotmail.com"}
]
description = "Tonearm is a no nonsense, Discord music bot you can self-host."
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE"
]
keywords = [
    "discord",
    "bot",
    "music"
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
tonearm = "tonearm:main"