[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "Tonearm"
version = "0.1.0dev3"
dependencies = [
    "nextcord[voice] >= 3.1.0, < 4",
    "google-api-python-client >= 2.170.0, < 3",
    "requests >= 2.32.3"
]
requires-python = ">= 3.13"
authors = [
    {name = "Renaud Gaspard", email = "gaspardrenaud@hotmail.com"}
]
description = "Tonearm is a no nonsense, Discord music bot you can self-host."
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE"
]
keywords = [
    "discord",
    "bot",
    "music"
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/Renaud11232/Tonearm"
source = "https://github.com/Renaud11232/Tonearm.git"
download = "https://github.com/Renaud11232/Tonearm/archive/refs/heads/master.zip"
issues = "https://github.com/Renaud11232/Tonearm/issues"

[project.scripts]
tonearm = "tonearm:main"