[build-system]
requires = [
    "hatchling >= 1.27",
    "hatch-vcs >= 0.5.0",
    "polib >= 1.2.0, < 2"
]
build-backend = "hatchling.build"

[project]
name = "Tonearm"
dependencies = [
    "nextcord[voice,speed] >= 3.1.0, < 4",
    "google-api-python-client >= 2.170.0, < 3",
    "requests >= 2.32.3",
    "injector >= 0.22.0",
    "werkzeug >= 3.1.3, < 4"
]
requires-python = ">= 3.13"
authors = [
    {name = "Renaud Gaspard", email = "gaspardrenaud@hotmail.com"}
]
description = "Tonearm is a no nonsense Discord music bot you can self-host."
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE"
]
keywords = [
    "discord",
    "bot",
    "music"
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = [
    "version"
]

[project.urls]
homepage = "https://github.com/Renaud11232/Tonearm"
source = "https://github.com/Renaud11232/Tonearm.git"
download = "https://github.com/Renaud11232/Tonearm/archive/refs/heads/master.zip"
issues = "https://github.com/Renaud11232/Tonearm/issues"

[project.scripts]
tonearm = "tonearm:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
artifacts = [
    "*.mo"
]
exclude = [
    "*.pot",
    "*.po"
]